--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "lodash": "4.17.11",
+    "node-sass": "4.11.0",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
