--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
         "not op_mini all"
     ],
     "devDependencies": {
-        "eslint": "^5.14.1",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-plugin-react": "^7.12.4",
-        "husky": "^1.3.1",
-        "lint-staged": "^8.1.4",
+        "eslint": "5.12.0",
+        "eslint-config-airbnb": "17.1.0",
+        "eslint-plugin-react": "7.12.4",
+        "husky": "^.3.1",
+        "lint-staged": "8.1.4",
         "prettier": "1.16.4"
     },
     "husky": {
