--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "node-sass": "4.11.0",
         "react": "16.8.1",
         "react-dom": "16.8.1",
-        "react-redux": "^6.0.1",
+        "react-redux": "6.0.1",
         "react-scripts": "2.1.5",
-        "redux": "^4.0.1"
+        "redux": "4.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -32,10 +32,10 @@
         "eslint": "5.12.0",
         "eslint-config-airbnb": "17.1.0",
         "eslint-plugin-react": "7.12.4",
-        "husky": "^.3.1",
+        "husky": ".3.1",
         "lint-staged": "8.1.4",
         "prettier": "1.16.4",
-        "redux-devtools": "^3.5.0"
+        "redux-devtools": "3.5.0"
     },
     "husky": {
         "hooks": {
