--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "react-dom": "16.8.1",
         "react-redux": "6.0.1",
         "react-scripts": "2.1.5",
-        "redux": "4.0.1"
+        "redux": "4.0.1",
+        "redux-form": "^8.1.0"
     },
     "scripts": {
         "start": "react-scripts start",
