--- a/package.json
+++ b/package.json
@@ -1,52 +1,72 @@
 {
-    "name": "gosia-html",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "classnames": "2.2.6",
-        "lodash": "4.17.11",
-        "node-sass": "4.11.0",
-        "react": "16.8.1",
-        "react-dom": "16.8.1",
-        "react-redux": "6.0.1",
-        "react-scripts": "2.1.5",
-        "redux": "4.0.1",
-        "redux-form": "^8.1.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "make-it-pretty": "yarn prettier --config .prettierrc.json --write 'src/**/*.{jsx,js}'"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "ie >= 9",
-        "not op_mini all"
-    ],
-    "devDependencies": {
-        "eslint": "5.12.0",
-        "eslint-config-airbnb": "17.1.0",
-        "eslint-plugin-react": "7.12.4",
-        "husky": ".3.1",
-        "lint-staged": "8.1.4",
-        "prettier": "1.16.4",
-        "redux-devtools": "3.5.0"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "lint-staged": {
-        "*.{js,json,css,md}": [
-            "prettier --write",
-            "git add"
-        ]
+  "name": "gosia-html",
+  "version": "0.1.0",
+  "watch": true,
+  "dependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "classnames": "2.2.6",
+    "express": "^4.16.4",
+    "lodash": "4.17.11",
+    "node-sass": "4.11.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "redux": "^3.7.2",
+    "redux-form": "^8.1.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^7.11.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^0.11.2",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.4",
+    "node-sass": "^4.11.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "1.16.4",
+    "redux-devtools": "3.5.0",
+    "sass-loader": "^6.0.7",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "scripts": {
+    "start:dev": "webpack-dev-server",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "lint": "./node_modules/.bin/eslint ./src"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "precommit": "lint",
+  "author": "Santhosh Sundar",
+  "license": "MIT"
 }
