--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,7 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"],
-    "semi": ["warn", "always"]
+    "linebreak-style": ["error", "unix"]
   },
   "parser": "babel-eslint"
 }
