--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
-    "start:dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack",
     "watch": "webpack --watch",
     "lint": "./node_modules/.bin/eslint ./src"
