Added loader for fonts, import one file to every stylesheets

--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
       {
         "root": ["./src"],
         "alias": {
-          "redux": "./src/redux"
+          "redux": "./src/redux",
+          "fonts": "./src/fonts"
         }
       }
     ],
