--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "express": "^4.16.4",
     "lodash": "4.17.11",
     "node-sass": "4.11.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.6.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "redux": "^3.7.2",
-    "redux-form": "^8.1.0"
+    "redux-form": "^8.1.0",
+    "resolve-url-loader": "^3.0.1",
+    "sass-resources-loader": "^2.0.0",
+    "style-loader": "^0.23.1",
+    "sugarss": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
@@ -39,7 +45,10 @@
     "file-loader": "^0.11.2",
     "husky": "1.3.1",
     "lint-staged": "8.1.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "postcss-load-config": "^2.0.0",
+    "postcss-loader": "^3.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "1.16.4",
     "redux-devtools": "3.5.0",
