--- a/package.json
+++ b/package.json
@@ -3,60 +3,62 @@
   "version": "0.1.0",
   "watch": true,
   "dependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/plugin-proposal-decorators": "7.3.0",
+    "@babel/preset-env": "7.3.4",
+    "@babel/preset-react": "7.0.0",
+    "babel-plugin-module-resolver": "3.2.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
     "classnames": "2.2.6",
-    "express": "^4.16.4",
+    "eslint-config-prettier": "4.1.0",
+    "express": "4.16.4",
     "lodash": "4.17.11",
     "node-sass": "4.11.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.6.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
-    "redux": "^3.7.2",
-    "redux-form": "^8.1.0",
-    "resolve-url-loader": "^3.0.1",
-    "sass-resources-loader": "^2.0.0",
-    "style-loader": "^0.23.1",
-    "sugarss": "^2.0.0"
+    "postcss-import": "12.0.1",
+    "postcss-preset-env": "6.6.0",
+    "prop-types": "15.6.2",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "react-redux": "6.0.1",
+    "redux": "4.0.1",
+    "redux-form": "8.1.0",
+    "resolve-url-loader": "3.0.1",
+    "sass-resources-loader": "2.0.0",
+    "style-loader": "0.23.1",
+    "sugarss": "2.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^0.11.2",
+    "ajv": "^6.10.0",
+    "babel-eslint": "8.2.6",
+    "babel-loader": "8.0.5",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "css-loader": "0.28.11",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "0.11.2",
     "husky": "1.3.1",
     "lint-staged": "8.1.4",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "postcss-load-config": "^2.0.0",
-    "postcss-loader": "^3.0.0",
-    "pre-commit": "^1.2.2",
+    "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "4.11.0",
+    "postcss-load-config": "2.0.0",
+    "postcss-loader": "3.0.0",
+    "pre-commit": "1.2.2",
     "prettier": "1.16.4",
     "redux-devtools": "3.5.0",
-    "sass-loader": "^6.0.7",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "sass-loader": "6.0.7",
+    "uglifyjs-webpack-plugin": "1.3.0",
+    "webpack": "4.26.0",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   },
   "scripts": {
     "start": "webpack-dev-server",
@@ -77,5 +79,11 @@
   },
   "precommit": "lint",
   "author": "Santhosh Sundar",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
