--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,6 @@
       }
     ],
     "@babel/plugin-proposal-class-properties"
-  ]
+  ],
+  "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
