--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "watch": true,
   "dependencies": {
-    "@babel/core": "7.3.4",
+    "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/plugin-proposal-decorators": "7.3.0",
-    "@babel/preset-env": "7.3.4",
-    "@babel/preset-react": "7.0.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
     "classnames": "2.2.6",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint-config-prettier": "4.1.0",
     "express": "4.16.4",
     "lodash": "4.17.11",
@@ -21,6 +22,7 @@
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-redux": "6.0.1",
+    "react-test-renderer": "^16.8.4",
     "redux": "4.0.1",
     "redux-form": "8.1.0",
     "resolve-url-loader": "3.0.1",
@@ -31,12 +33,14 @@
   "devDependencies": {
     "ajv": "^6.10.0",
     "babel-eslint": "8.2.6",
+    "babel-jest": "^24.5.0",
     "babel-loader": "8.0.5",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.11",
+    "enzyme": "^3.9.0",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "1.9.0",
@@ -46,6 +50,7 @@
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "0.11.2",
     "husky": "1.3.1",
+    "jest": "^24.5.0",
     "lint-staged": "8.1.4",
     "mini-css-extract-plugin": "0.5.0",
     "postcss-load-config": "2.0.0",
@@ -63,7 +68,8 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "watch": "webpack --watch",
-    "lint": "./node_modules/.bin/eslint ./src"
+    "lint": "./node_modules/.bin/eslint ./src",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -75,6 +81,15 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|sass)$": "<rootDir>/src/__mocks__/styleMock.js"
+    }
   },
   "precommit": "lint",
   "author": "Santhosh Sundar",
