--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "4.17.11",
     "node-sass": "4.11.0",
     "react": "16.8.1",
+    "react-animated-slider": "^1.1.4",
     "react-dom": "16.8.1",
     "react-redux": "6.0.1",
     "react-router-dom": "^4.3.1",
