--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pre-commit": "1.2.2",
     "prettier": "1.16.4",
     "redux-devtools": "3.5.0",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "6.0.7",
     "uglifyjs-webpack-plugin": "1.3.0",
     "webpack": "4.26.0",
