--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,6 +1,21 @@
 language: node_js
-node_js:
-  - '10'
+node_js: 10.15
+
+install:
+  - npm install
 
 before_install:
-  - npm i -g npm@version-number
+  - npm i -g 10.15
+
+# https://docs.travis-ci.com/user/build-matrix/
+
+cache:
+  directories:
+    - node_modules
+
+script:
+  - npm test
+  - npm run build
+
+notifications:
+  email: false
