--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,11 +1,9 @@
 language: node_js
-node_js: 10.15
+node_js:
+  - 'stable'
 
 install:
   - npm install
-
-before_install:
-  - npm i -g 10.15
 
 # https://docs.travis-ci.com/user/build-matrix/
 
@@ -16,6 +14,7 @@ cache:
 script:
   - npm test
   - npm run build
+  - npm start
 
 notifications:
   email: false
