--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ language: node_js
 node_js: 10.15
 cache:
   yarn: true
-  directories:
-    # we also need to cache folder with Cypress binary
-    # https://docs.cypress.io/guides/guides/continuous-integration.html#Travis
-    - ~/.cache
 
 addons:
   apt:
@@ -13,12 +9,11 @@ addons:
       - libgconf-2-4
 
 install:
-  - yarn install --frozen-lockfile
+  - yarn install
 
 before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
   - export PATH="$HOME/.yarn/bin:$PATH"
-  - export TZ=Europe/Stockholm
 # https://docs.travis-ci.com/user/build-matrix/
 
 deploy:
