--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ cache:
 addons:
   apt:
     packages:
-    - libgconf-2-4
+      - libgconf-2-4
 install:
-- yarn install
+  - yarn install --frozen-lockfile
 before_install:
-- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
-- export PATH="$HOME/.yarn/bin:$PATH"
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
+  - export PATH="$HOME/.yarn/bin:$PATH"
 deploy:
   provider: heroku
   api_key:
